--- a/02_assignments/assignment_1.ipynb
+++ b/02_assignments/assignment_1.ipynb
@@ -57,7 +57,8 @@
     "from ISLP import load_data\n",
     "from ISLP.models import (ModelSpec as MS,\n",
     "                         summarize,\n",
-    "                         poly)"
+    "                         poly)\n",
+    "print(Boston)"
    ]
   },
   {
@@ -68,7 +69,7 @@
    "outputs": [],
    "source": [
     "# Load the \"Boston\" dataset using the \"load_data\" function from the ISLP package\n",
-    "Boston = load_data('Boston')"
+    "Boston = load_data('Boston')\n"
    ]
   },
   {
@@ -80,7 +81,13 @@
     "\n",
     "_(i)_ What are the `medv` and `dis` variables being plotted? (Hint: review this [link](https://islp.readthedocs.io/en/latest/datasets/Boston.html))\n",
     "\n",
-    "_(ii)_ What concept ‘defines’ the plotted line?"
+    "dis: weighted mean of distances to five Boston employment centres.\n",
+    "\n",
+    "medv: median value of owner-occupied homes in $1000s.\n",
+    "\n",
+    "_(ii)_ What concept ‘defines’ the plotted line?\n",
+    "\n",
+    "regression line"
    ]
   },
   {
@@ -125,6 +132,10 @@
     "\n",
     "_(iii)_ What is the (implied) null hypothesis? What is the (implied) alternative hypothesis?\n",
     "\n",
+    "Null hypothesis means that the predictor dis has no effect on the dependent variable medv. \n",
+    "\n",
+    "alternative hypothesis means that the predictor dis has an effect on the dependent variable medv.\n",
+    "\n",
     "_(iv)_ Now, let’s fit a simple regression model, using the general syntax `sm.OLS()` and `model.fit()`. As above, use `medv` as the response variable Y, and `dis` as the predictor variable X. (Hint: use the syntax `sm.add_constant` with the appropriate argument)."
    ]
   },
@@ -135,7 +146,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Add your code here"
+    "dis_with_const = sm.add_constant(dis)\n",
+    "model = sm.OLS(medv, dis_with_const)\n",
+    "results = model.fit()\n",
+    "print(results.summary())"
    ]
   },
   {
@@ -156,7 +170,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your answer here"
+    "intercept = results.params[0]\n",
+    "slope = results.params[1]\n",
+    "print(f\" B0: {intercept}\")\n",
+    "print(f\" B1: {slope}\")\n",
+    "\n",
+    "std_err_b0 = results.bse[0]\n",
+    "std_err_b1 = results.bse[1]\n",
+    "print(f\"Standard Error B0: {std_err_b0}\")\n",
+    "print(f\"Standard Error B1: {std_err_b1}\")\n",
+    "\n",
+    "conf_intervals = results.conf_int()\n",
+    "print( f\"Confidence Interval B0 : {conf_intervals[0]}\")\n",
+    "print( f\"Confidence Interval B1 : {conf_intervals[1]}\")\n"
    ]
   },
   {
@@ -173,11 +199,25 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "3422d04c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rsquared = results.rsquared\n",
+    "print(\"Rsquared:\", rsquared)\n",
+    "print(\"F-statistic:\", results.fvalue)\n",
+    "print(\"p-value:\", results.f_pvalue)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "d7d2b412",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your answer here"
+    "# the rsquared value is very low indicating that the model might not be a good fit with just the dis as a predictor\n",
+    "# since the p value is extremely low less than 0.05 we can reject the null hypothesis   "
    ]
   },
   {
@@ -205,7 +245,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Add your code here"
+    "x = Boston[['dis', 'rm']]\n",
+    "x = sm.add_constant(x)\n",
+    "y = Boston['medv']\n",
+    "results = sm.OLS(y, x).fit()\n"
    ]
   },
   {
@@ -215,7 +258,11 @@
    "source": [
     "_(ii)_ In the context of the `Boston` dataset, state the null and alternative hypotheses.\n",
     "\n",
+    "The null hypothesis states that neither `dis` nor `rm` have a significant effect on `medv`, while the alternative hypothesis proposes that at least one of the predictors, `dis` or `rm`, has a significant impact on `medv`.\n",
+    "\n",
     "_(iii)_ Review the model output, using `summary()`. Does it appear that both `dis` and `rm` are predictive of `medv`? How did you determine this?\n",
+    "\n",
+    "both dis and rm have p-values lower than 0.05. This suggests that both predictors are statistically significant in predicting medv \n",
     "\n",
     "_(iv)_ We can use the inbuilt `sm.graphics.plot_regress_exog` function to generate helpful diagnostic plots (Hint: provide `plot_regress_exog` with the multiple regression model). Review the first generated plot, 'Residuals vs. Fitted'. Which observations are outliers? What impact might outliers have on our model?"
    ]
@@ -227,7 +274,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Add your code here"
+    "print(results.summary())\n",
+    "\n",
+    "fig = plt.figure(figsize=(20, 20))\n",
+    "sm.graphics.plot_regress_exog(results, 'dis', fig)\n",
+    "plt.show()"
    ]
   },
   {
@@ -245,7 +296,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Add your code here"
+    "Boston['dis_rm_interaction'] = Boston['dis'] * Boston['rm']\n",
+    "X = Boston[['dis', 'rm', 'dis_rm_interaction']]\n",
+    "y = Boston['medv']\n",
+    "X = sm.add_constant(X)\n",
+    "model = sm.OLS(y, X).fit()\n",
+    "print(model.summary())\n",
+    "\n",
+    "# there is an interaction between the dis and rm variables. the coefficient is significant since p value is less than 0.05 and it is positive 0.9855 \n",
+    "# as the interaction between the distance of employment and the average room number increases so does the value of the homes denoted by medv "
    ]
   },
   {
@@ -310,7 +369,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.9.15"
   },
   "vscode": {
    "interpreter": {
